--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,8 +1,10 @@
 body {
-  margin-left: 25%;
+  margin-left: 3%;
   margin-right: 25%;
   margin-top: 10%;
   font-family: "Open Sans", sans-serif;
+  word-wrap: break-word;
+
 }
 
 label {
