--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -27,18 +27,18 @@ h1, h2 {
   display: inline-block;
   vertical-align: middle;
   margin-top: 0px;
-  margin-bottom: 10px;
+  margin-bottom: 3px;
 }
 
 h2 {
-  color: #AAA;
-  font-size: 32px;
+/*  color: #AAA;*/
+  font-size: 24px;
 }
 
 h3 {
   font-weight: normal;
   color: #AAA;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .black {
